lexer: comment out unused rules detected in *.log files of ant.xml #SCL-16165
- removed MaxPermSize flag due to it`s deprecated