@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright 2000-2008 JetBrains s.r.o.
+  ~ Copyright 2000-2020 JetBrains s.r.o.
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
@@ -33,7 +33,6 @@
 
     <java classname="JFlex.Main" output="jflexCore.log" fork="true" maxmemory="1024m" failonerror="true">
       <classpath path="JFlex_patched.jar"/>
-      <jvmarg line="-XX:MaxPermSize=200M"/>
       <arg value="-sliceandcharat"/>
       <arg value="-skel"/>
       <arg value="${skeleton}"/>
